Yamuna | FBE - 22 | Fix line spacing between label and code editor in form conditions modal

--- a/styles/common/_popUp.scss
+++ b/styles/common/_popUp.scss
@@ -178,6 +178,11 @@
   z-index: 1002 !important; /* stylelint-disable-line declaration-no-important */
 }
 
+.line-break-1 {
+  display: block;
+  margin-bottom: 1em;
+}
+
 .line-break-2 {
   display: block;
   margin-bottom: 2em;
